--- a/sample-theme/assets/scss/style.scss
+++ b/sample-theme/assets/scss/style.scss
@@ -110,48 +110,6 @@ body {
         color: var(--bg-content-color);
         font-size: 4rem;
     }
-
-    // その他ページの背景
-    .bg-note {
-        position: absolute;
-        right: 0px;
-        top: var(--a-wrap-top-position);
-        width: var(--a-wrap-width);
-        height: 100vh;
-
-        div {
-            position: absolute;
-            width: var(--a-wrap-width);
-            height: 150vh;
-            border: 1px solid var(--bg-content-color);
-            background: #fff;
-            box-shadow: -60px 30px 0px -20px #ddd;
-            animation: change-origin 0.3s 1;
-            translate: calc(0px - var(--a-wrap-right-position)) 0;
-
-
-            &:nth-child(1) {
-                top: 0px;
-                left: 0px;
-                rotate: 0deg;
-                z-index: 3;
-            }
-
-            &:nth-child(2) {
-                top: 78px;
-                left: 10px;
-                rotate: 194deg;
-                z-index: 2;
-            }
-
-            &:nth-child(3) {
-                top: -14px;
-                left: -180px;
-                rotate: 344deg;
-                z-index: 1;
-            }
-        }
-    }
 }
 
 @keyframes typing {
@@ -1382,8 +1340,13 @@ footer.page-last {
             }
         }
 
-        &:has(.new-posts){
+        &:has(.new-posts) {
+            height: calc(100vh - var(--footer-height));
             overflow: hidden;
+
+            .bg-logo{
+                display: none;
+            }
         }
     }
 
@@ -1398,11 +1361,12 @@ footer.page-last {
                 transform: none;
                 width: 100%;
 
-                &:nth-child(2) a.bg-image{
+                &:nth-child(2) a.bg-image {
                     width: 90%;
 
                 }
-                &:nth-child(3) a.bg-image{
+
+                &:nth-child(3) a.bg-image {
                     width: 80%;
                 }
 
@@ -1453,16 +1417,23 @@ footer.page-last {
             background-color: #f5f5f5;
         }
 
-        &:has(ul.menu-list:not([disabled]))::before {
+        &:has(ul.menu-list:not([disabled])) {
+            display: flex;
+            flex-direction: column-reverse;
             bottom: 0px;
             right: 0px;
-            height: 100vh;
-            width: 100vw;
-            border-radius: 0%;
-            transition: height .3s linear, width .3s linear, border-radius .3s linear;
 
-            box-shadow: -5px -5px 10px 0px rgb(0 0 0 / 25%);
-            rotate: -1deg;
+            &::before {
+                bottom: 0px;
+                right: 0px;
+                height: 100vh;
+                width: 100vw;
+                border-radius: 0%;
+                transition: height .3s linear, width .3s linear, border-radius .3s linear;
+
+                box-shadow: -5px -5px 10px 0px rgb(0 0 0 / 25%);
+                rotate: -1deg;
+            }
         }
 
         li a,
@@ -1475,11 +1446,6 @@ footer.page-last {
         ul.menu-list {
             top: -50vh;
         }
-    }
-
-
-    div.bg div.bg-note {
-        display: none;
     }
 
     div.content-body {
@@ -1507,5 +1473,9 @@ footer.page-last {
         width: 100%;
         height: auto;
         margin: 100px auto;
+
+        &:after {
+            content: none;
+        }
     }
 }
